# 00_data_augmentation

./: .gitignore  Makefile  README.md  agent.py  autonomous_agent_demo.py  claude-progress.txt  client.py  feature_list.json  init.sh  pyproject.toml  security.py  test_security.py
dev/: .gitignore  docker-compose.yaml
prompts/: app_spec.txt  coding_prompt.md  initializer_prompt.md
src/data_augmentation/: __init__.py
src/data_augmentation/cleaning/: __init__.py  cleaner.py  dedup.py  normalize.py
src/data_augmentation/features/: builder.py  categorical.py  derived.py  numerical.py
src/data_augmentation/models/: evaluator.py  predictor.py  trainer.py  tuner.py
src/data_augmentation/storage/: __init__.py  database.py  export.py  schema.py
src/data_augmentation/websites/: __init__.py  aucsupport.py  carsensor.py  mobilico.py
tests/: conftest.py  test_cleaning.py  test_features.py  test_models.py  test_scraper.py  test_storage.py
