[project]
name = "data-augmentation"
version = "0.1.0"
description = "二手車データ収集・価格予測 Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.8.0",
    "japanize-matplotlib>=1.1.3",
    "japanmap>=0.6.0",
    "geopandas>=0.14.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "jupyterlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
